test/library/standard/Memory/Initialization/MoveInitializeCopyError.good
MoveInitializeCopyError.chpl:4: In function 'test1':
MoveInitializeCopyError.chpl:8: error: cannot call 'moveInitialize' because 'r2' might be used elsewhere
